spade-tests/src/snapshots/spade_tests__parser__expected_expression_binop.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let abc = 1+#;
    abc
}


error: Unexpected `#`, expected expression
  ┌─ testinput:2:17
  │
2 │     let abc = 1+#;
  │                 ^ expected expression here

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:18
  │  
1 │   fn top() -> bool {
  │               ---- bool type specified here
  │ ╭──────────────────^
2 │ │     let abc = 1+#;
3 │ │     abc
4 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
